# product-lens-ai

./: .gitignore  README.md  docker-compose.mysql.yml
backend/: .env.example  .env.mysql.example  pyproject.toml  requirements.txt
backend/app/: __init__.py  auth.py  crypto.py  history.py  jobs.py  main.py  models.py  quality.py  service.py  trace.py  url_parser.py
backend/app/providers/: __init__.py  demo.py  live.py
backend/sql/: schema.sql
backend/tests/: test_api.py  test_live_providers.py  test_quality.py  test_service.py  test_trace.py  test_url_parser.py
docs/: 01-需求分析文档.md  02-架构设计文档.md  03-核心功能与实现说明.md  04-手动测试文档.md
docs/superpowers/plans/: 2026-07-14-ai-product-assistant.md  2026-07-14-transparent-analysis-pipeline-design.md  2026-07-14-transparent-analysis-pipeline-implementation.md  2026-07-16-mysql-encrypted-history.md
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  api.ts  main.tsx  styles.css  types.ts
frontend/src/components/: AnalysisTrace.test.tsx  AnalysisTrace.tsx  InsightGrid.tsx  ProductSummary.tsx  ProgressTimeline.tsx  QualityPanel.tsx  ScriptPanel.tsx  TraceStep.tsx
